# horus

./: .gitignore  .travis.yml  README.md  commander.html  index.html  params.json  pom.xml
HorusCommander/: HorusCommander.pro
HorusCommander/Commander/: Commander.pro
HorusCommander/Commander-tests/: Commander-tests.pro  footest.cpp  footest.h  main.cpp
commander/: .gitignore  ChangeLog  Doxyfile  Makefile.am  config.h  config.h.in  configure.ac
commander/config/: ChangeLog
commander/docs/html/: HorusConfig_2main_8cpp.html  HorusConfig_2main__window_8cpp.html  HorusConfig_2main__window_8h.html  HorusConfig_2main__window_8h_source.html  HorusConfig_2settings_8cpp.html  HorusConfig_2settings_8h.html  HorusConfig_2settings_8h_source.html  HorusMLE_2main_8cpp.html  HorusMLE_2main__window_8cpp.html  HorusMLE_2main__window_8h.html  HorusMLE_2main__window_8h_source.html  HorusMLE_2settings_8cpp.html  HorusMLE_2settings_8h.html  HorusMLE_2settings_8h_source.html  about__dialog_8cpp.html  about__dialog_8h.html  about__dialog_8h_source.html  annotated.html  bak_2globals_8h.html  bak_2globals_8h_source.html  bak_2ini__helper_8h.html  bak_2ini__helper_8h_source.html  bak_2print__status_8h.html  bak_2print__status_8h_source.html  bak_2terminal_8h.html  bak_2terminal_8h_source.html  circular__buffer_8c.html  circular__buffer_8h.html  circular__buffer_8h_source.html  circular__stack_8c.html  circular__stack_8h.html  circular__stack_8h_source.html  classAboutDialog.html  classConfigModule.html  classDifficultyFlightModelPage.html  classDifficultyMapIconsPage.html  classDifficultyPage.html  classDifficultySubpage.html  classDifficultyVarPage.html  classDifficultyViewPage.html  (+367 more)
commander/docs/html/search/: all_5f.js  all_61.html  all_61.js  all_62.js  all_63.html  all_63.js  all_64.html  all_64.js  all_65.html  all_65.js  all_66.html  all_66.js  all_67.html  all_67.js  all_68.html  all_68.js  all_69.html  all_69.js  all_6b.js  all_6c.html  all_6c.js  all_6d.html  all_6d.js  all_6e.html  all_6e.js  all_6f.html  all_6f.js  all_70.html  all_70.js  all_71.js  all_72.html  all_72.js  all_73.html  all_73.js  all_74.html  all_74.js  all_75.html  all_75.js  all_76.html  all_76.js  (+184 more)
commander/l10n/: .directory  ChangeLog  LINGUAS  Makefile.in.in  Makevars  POTFILES.in  horus-commander.pot  ru.gmo  ru.po
commander/m4/: ChangeLog
commander/src/: Makefile.am  console_parser.c  console_parser.h  event_parser.c  event_parser.h  game_server.h  globals.h  gs.c  gs.h  gs_armies.h  gs_cfg.c  gs_cfg.h  gs_cfg_grp.h  gs_cfg_key.h  gs_cfg_sections.h  gs_cmd.c  gs_cmd.h  gs_console.c  gs_console.h  gs_fifo.c  gs_fifo.h  gs_input_handlers.c  gs_input_handlers.h  gs_mission_manager.c  gs_mission_manager.h  gs_paths.c  gs_paths.h  gs_process.c  gs_process.h  gs_scripts.c  gs_scripts.h  ini_helper.h  main.c  main_parser.c  main_parser.h  pilot_manager.c  pilot_manager.h  print_status.h  shell_parser.c  shell_parser.h  (+7 more)
commander/src/HorusConfig/: HorusConfig.pro  Makefile.am  config.h  config_module.cpp  config_module.h  difficulty_flight_model_page.cpp  difficulty_flight_model_page.h  difficulty_flight_model_page.ui  difficulty_map_icons_page.cpp  difficulty_map_icons_page.h  difficulty_map_icons_page.ui  difficulty_page.cpp  difficulty_page.h  difficulty_page.ui  difficulty_subpage.cpp  difficulty_subpage.h  difficulty_var_page.cpp  difficulty_var_page.h  difficulty_var_page.ui  difficulty_view_page.cpp  difficulty_view_page.h  difficulty_view_page.ui  difficulty_weapons_page.cpp  difficulty_weapons_page.h  difficulty_weapons_page.ui  general_page.cpp  general_page.h  general_page.ui  img.qrc  main.cpp  main_window.cpp  main_window.h  main_window.ui  named_page.cpp  named_page.h  net_page.cpp  net_page.h  net_page.ui  qapp.rc  settings.cpp  (+1 more)
commander/src/HorusConfig/l10n/: horusConfig_ru.qm  horusConfig_ru.ts
commander/src/HorusMLE/: HorusMLE.pro  Makefile.am  about_dialog.cpp  about_dialog.ui  edge.cpp  edge.h  img.qrc  list_file_helper.cpp  list_file_helper.h  main.cpp  main_window.cpp  main_window.h  main_window.ui  map_list_view.cpp  map_list_view.h  mission_dialog.cpp  mission_dialog.h  mission_dialog.ui  mission_elem.cpp  mission_elem.h  mission_list_view.cpp  mission_list_view.h  settings.cpp  settings.h
commander/src/HorusMLE/l10n/: horusMLE_ru.qm  horusMLE_ru.ts
commander/src/domain/: Makefile.am  d_army.h  d_mission.c  d_mission.h  d_pilot.c  d_pilot.h  d_weather.c  d_weather.h
commander/src/mxml/: Makefile.am  README.md  mconfig.h  mxml-attr.c  mxml-file.c  mxml-get.c  mxml-index.c  mxml-node.c  mxml-private.c  mxml-private.h  mxml-search.c  mxml-set.c  mxml-string.c  mxml.h  mxmldoc.c
commander/src/util/: .directory  Makefile.am  circular_buffer.c  circular_buffer.h  common.h  file.c  file.h  file_ext.h  ini.c  ini.h  l10n.c  l10n.h  linenoise.c  linenoise.h  msg_queue.c  msg_queue.h  print_status.c  print_status.h  regexxx.c  regexxx.h  str.c  str.h  terminal.c  terminal.h  timestamp_t.c  timestamp_t.h  types.h  winproc.c  winproc.h  winsock_helper.c  winsock_helper.h  winstdin_helper.c  winstdin_helper.h
commander/src/util/stack/: Makefile.am  circular_stack.c  circular_stack.h  stack_str.c  stack_str.h
commander/tests/: Makefile.am  check_console_parser.c
commander/tests/util/: Makefile.am  MinUnit.c  MinUnit.h  check_circular_buffer.c  check_circular_stack.c  check_console_parser.c  check_print_status.c  check_regex.c  check_regex.h  check_str.c
horus-canopic/: pom.xml
horus-commander/: pom.xml
horus-core/: catalog.xml  cfgschm.xml  configScheme.xml  pom.xml
horus-generator/: pom.xml
horus-locator/: pom.xml
horus-web/: .gitignore  catalog.xml  pom.xml
img/: .directory
js/: layout.js  popup.js
layout/: layout.html
maptools/: index.html
maptools/Maps/Ardennes/: Props.xml
maptools/v2/: index.html
maptools/v3/: index.html  maptools.css  maptools.js
maptools/v4/: index.html  maptools.css  maptools.js
maptools/v5/: index.html  maptools.css  maptools.js
pages/stylesheets/: styles.css
style/: layout.css  styles.css
(+629 files in other folders)
